--- a/style.css
+++ b/style.css
@@ -1,16 +1,22 @@
 body {
+    background-image:url(
+        https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxODExMDlfMjkz%2FMDAxNTQxNzM0NDc5NDUy.MQUjCzT5yh35U3ACAyBl9mWDFfFja3PTqyMDJgIc2HUg.Gjh1b7SmQxKbJCuk4RMNaTofGfLhcVB3l7ioBHXmWOMg.PNG.kne6237%2Fm363.png&type=sc960_832
+    );
+    background-size:cover;
+    background-repeat:no-repeat;
     padding: 0;
     margin: 0;
+    color: #000000;
 }
   
 
 #search-box{
     width: 100%;
     text-align: center;
-    margin: 50px;
+    margin: 100px;
 }
 #search{
-    all: unset;
+    
     width: 400px;
     height: 50px;
     border-radius: 30px;
@@ -26,23 +32,27 @@ body {
     width: 100px;
     height: 30px;
     padding: 10px;
+    border: 2px solid #faf0e6;
     border-radius: 20px;
+    color: #000000;
 }
 #submit:hover{
-    background-color: pink;
+    background-color: #ffe4e1;
 }
 
 
 #container {
-    width: 60%;
-    columns: 2;
+    width: 80%;
+    columns: 4;
     margin: 50px auto;
 }
 .item {
     width: 100%;
     /* height: 300px; */ 
     margin-bottom: 10px;
-    background: pink;
+    background: #ffe4e1;
+    border: 2px solid #faf0e6;
+    border-radius: 10px;
     display: inline-block; /* 컬럼 짤림 방지*/
 }
 
